--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./
-        server-dir: ./var/www/topbots.tr1n.me/docs
+        server-dir: ./var/www/topbots.tr1n.me/docs/
         log-level: verbose
         
