--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,19 @@
-on: push
+on: [push]
 name: 🚀 Deploy website on push
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
+    deploy_job:
     runs-on: ubuntu-latest
+    name: deploy
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        protocol: ftps
-        port: 22
-        local-dir: ./
-        server-dir: ./var/www/topbots.tr1n.me/docs/
-        log-level: verbose
-        
+        - name: Checkout
+        uses: actions/checkout@v3
+        - name: deploy file
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+        with:
+            username: ${{ secrets.FTP_USERNAME }}
+            server: ${{ secrets.FTP_SERVER }}
+            password: ${{ secrets.FTP_PASSWORD }}
+            local_path: './'
+            remote_path: '/var/www/topbots.tr1n.me/docs/'
+            sftpArgs: '-o ConnectTimeout=5'
+            log-level: verbose
